--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="add_note">Add Note</string>
     <string name="todo">TODO</string>
     <string name="welcome">-:Welcome:-</string>
+    <string name="note">Notes</string>
+    <string name="sample_title">This is sample note title</string>
+    <string name="sample_desc">This is a sample notes description</string>
+    <string name="edit_note">Edit Note</string>
 
 </resources>
